--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
 		"symfony/console" : "6.1.*",
 		"symfony/doctrine-messenger" : "6.1.*",
 		"symfony/dotenv" : "6.1.*",
-		"symfony/expression-language" : "6.1.*",
+		"symfony/expression-language" : "6.2.2",
 		"symfony/flex" : "2.2.4",
 		"symfony/form" : "~6.2",
 		"symfony/framework-bundle" : "6.1.*",
@@ -38,7 +38,10 @@
 		"twig/extra-bundle" : "^2.12|^3.0",
 		"twig/twig" : "^2.12|^3.0",
 		"guzzlehttp/guzzle" : "^7.5",
-		"league/iso3166" : "~4.1"
+		"league/iso3166" : "~4.1",
+		"symfony/http-foundation" : "~6.2",
+		"symfony/cache" : "6.2.4",
+		"symfony/var-exporter" : "~6.2"
 	},
 	"require-dev" : {
 		"phpunit/phpunit" : "^9.5",
